--- a/app/app.css
+++ b/app/app.css
@@ -1,3 +1,34 @@
+@charset "UTF-8";
+* {
+  padding: 0;
+  margin: 0; }
+
+input {
+  outline: none; }
+
+body {
+  font-size: 12px/1.5 STHeiti,微软雅黑,sans-serif;
+  background: #f1f1f1; }
+
+ul, ol {
+  list-style: none; }
+
+article, aside, details, figcaption, figure,
+footer, header, hgroup, menu, nav, section {
+  display: block; }
+
+table {
+  border-collapse: collapse;
+  border-spacing: 0; }
+
+i {
+  font-style: normal; }
+
+a {
+  color: #333; }
+  a:link, a:visited, a:hover, a:active {
+    color: #333;
+    text-decoration: none; }
 body {
   background: #f00;
   -webkit-transform: rotate(30deg);
