--- a/src/assets/scss/components.scss
+++ b/src/assets/scss/components.scss
@@ -7,7 +7,7 @@
 	background-color: #fff;
 	position: fixed;
 	width: 100%;
-	z-index: 2;
+	z-index: 10;
 	
 	&>div{
 		height: 100%;
@@ -61,4 +61,48 @@
 			}
 		}
 	}
+}
+
+.side-menu{
+	position: absolute;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+	transition: opacity .5s;
+	transform: translate(-100%,0);
+	opacity: 0;
+	z-index: 20;
+	.content{
+		width:80%;
+		background: #fff;
+		position: absolute;
+		top: 0;
+		z-index: 30;
+		height: 100%;
+		transform: translate(-100%,0);
+		transition: transform .5s;
+	}
+
+	&.active {
+		opacity: 1;
+		transform: translate(0,0);
+		.content {
+			transform: translate(0,0);
+		}
+	}
+
+	&.exit{
+		transition: all .5s;
+	}
+}
+
+.cover{
+		position: absolute;
+		z-index: 20;
+		background: rgba(0,0,0,.45);
+		width: 100%;
+		height: 100%;
+		top: 0;
+		left: 0;
 }
