--- a/src/assets/scss/lib.scss
+++ b/src/assets/scss/lib.scss
@@ -1,6 +1,6 @@
 $mainBg: #f1f1f1;
 
-$color-primary: #f00;
+$color-primary: #FF6700;
 $color-info: #d00;
 $color-disabled: #999;
 $head-height: 0.78rem;
