--- a/app/app.css
+++ b/app/app.css
@@ -41,9 +41,10 @@ body {
   display: inline-block; }
 
 .main {
-  position: absolute;
   width: 100%;
-  top: 0.78rem; }
+  padding-top: 0.78rem;
+  height: 100%;
+  overflow-y: scroll; }
 
 .fade-enter {
   opacity: 0;
@@ -66,32 +67,108 @@ body {
 .mt1 {
   margin-top: 0.1rem; }
 
+.mb1 {
+  margin-bottom: 0.1rem; }
+
 .mt2 {
   margin-top: 0.2rem; }
+
+.mb2 {
+  margin-bottom: 0.2rem; }
 
 .mt3 {
   margin-top: 0.3rem; }
 
+.mb3 {
+  margin-bottom: 0.3rem; }
+
 .mt4 {
   margin-top: 0.4rem; }
+
+.mb4 {
+  margin-bottom: 0.4rem; }
 
 .mt5 {
   margin-top: 0.5rem; }
 
+.mb5 {
+  margin-bottom: 0.5rem; }
+
 .mt6 {
   margin-top: 0.6rem; }
+
+.mb6 {
+  margin-bottom: 0.6rem; }
 
 .mt7 {
   margin-top: 0.7rem; }
 
+.mb7 {
+  margin-bottom: 0.7rem; }
+
 .mt8 {
   margin-top: 0.8rem; }
+
+.mb8 {
+  margin-bottom: 0.8rem; }
 
 .mt9 {
   margin-top: 0.9rem; }
 
+.mb9 {
+  margin-bottom: 0.9rem; }
+
 .mt10 {
   margin-top: 1rem; }
+
+.mb10 {
+  margin-bottom: 1rem; }
+
+.fl {
+  float: left; }
+
+.fr {
+  float: right; }
+
+/*按钮*/
+.btn {
+  padding: .1rem .2rem;
+  font-size: .28rem;
+  border-radius: 5px;
+  border: 0px;
+  outline: none;
+  background: #FF6700;
+  cursor: pointer;
+  color: #fff;
+  display: inline-block; }
+  .btn.btn-primary {
+    background-color: #FF6700; }
+    .btn.btn-primary:hover {
+      background-color: #cc5200; }
+    .btn.btn-primary:active {
+      background-color: #ff8533; }
+  .btn.btn-ghost {
+    background-color: transparent;
+    color: #FF6700;
+    border: 1px solid #FF6700; }
+    .btn.btn-ghost:active {
+      background: #FF6700;
+      color: #fff; }
+  .btn.disabled, .btn[disabled] {
+    background-color: #eee;
+    color: #fff;
+    cursor: no-drop; }
+  .btn.btn-block {
+    -webkit-box-sizing: border-box;
+            box-sizing: border-box;
+    width: 100%;
+    padding: .2rem; }
+
+.bt {
+  border-top: 1px solid #e1e1e1; }
+
+.nbb {
+  border-bottom: 0px !important; }
 
 /*品牌活动*/
 .activity-item {
@@ -162,6 +239,9 @@ body {
     font-size: .24rem;
     color: #555555; }
 
+.brand-list {
+  overflow: hidden; }
+
 .brand-item {
   width: 50%;
   float: left;
@@ -203,6 +283,180 @@ body {
     background-repeat: no-repeat;
     padding-left: 1rem;
     background-position: left center; }
+
+.index-section {
+  background: #fff;
+  margin-top: .2rem;
+  border-bottom: 1px solid #D6D7DC;
+  /*研发团队*/ }
+  .index-section:first-of-type {
+    margin-top: 0; }
+  .index-section .panel-list {
+    padding: 0 .3rem;
+    background: #FAFAFA; }
+    .index-section .panel-list .panel {
+      -webkit-box-shadow: none;
+              box-shadow: none;
+      border-bottom: 1px dashed #D6D7DC;
+      margin-bottom: 0;
+      border-bottom-left-radius: 0;
+      border-bottom-right-radius: 0;
+      padding-left: 0;
+      padding-right: 0; }
+      .index-section .panel-list .panel:last-of-type {
+        border-bottom: 0px;
+        border-bottom-left-radius: 5px;
+        border-bottom-right-radius: 5px; }
+  .index-section.team .index-section-head {
+    border-bottom: 1px solid #E1E1E1; }
+  .index-section.team .index-section-body {
+    border-bottom: 1px solid #e1e1e1; }
+  .index-section.team .info-card {
+    display: -webkit-box;
+    -webkit-box-align: center;
+    -webkit-box-orient: horizontal;
+    -webkit-box-pack: center;
+    border-bottom: 1px dashed #D6D7DC;
+    padding: .2rem 0; }
+    .index-section.team .info-card:last-of-type {
+      border-bottom: 0; }
+    .index-section.team .info-card .info-card-img {
+      width: 1.4rem;
+      height: 1.4rem;
+      display: -webkit-box;
+      -webkit-box-align: center;
+      -webkit-box-orient: horizontal;
+      -webkit-box-pack: center;
+      border-radius: 5px; }
+    .index-section.team .info-card .info-card-content {
+      -webkit-box-flex: 1;
+      display: -webkit-box;
+      -webkit-box-align: start;
+      -webkit-box-orient: vertical;
+      -webkit-box-pack: center;
+      margin-left: 0.3rem; }
+    .index-section.team .info-card .info-card-title {
+      color: #323232;
+      font-size: 0.28rem; }
+    .index-section.team .info-card .info-card-summary {
+      color: #7D7D7D;
+      font-size: .24rem;
+      -webkit-line-clamp: 3;
+      -webkit-box-orient: vertical;
+      display: -webkit-box;
+      text-overflow: ellipsis;
+      overflow: hidden; }
+
+.index-section-head {
+  text-align: center;
+  padding: .3rem 0; }
+  .index-section-head .title {
+    font-size: .32rem;
+    position: relative;
+    color: #555; }
+    .index-section-head .title:before {
+      content: '';
+      position: absolute;
+      top: 50%;
+      width: 1rem;
+      margin-left: -1.2rem;
+      left: 0;
+      height: 1px;
+      background: #555; }
+    .index-section-head .title:after {
+      content: '';
+      position: absolute;
+      top: 50%;
+      width: 1rem;
+      margin-right: -1.2rem;
+      right: 0;
+      height: 1px;
+      background: #555; }
+  .index-section-head .sub-title {
+    font-size: .24rem;
+    color: #777777; }
+
+.index-section-body {
+  padding: 0 .2rem; }
+  .index-section-body .index-section-body-container {
+    border-bottom: 1px dashed #D6D7DC;
+    padding-bottom: .2rem; }
+  .index-section-body .index-section-body-img {
+    width: 100%;
+    border-radius: 5px; }
+  .index-section-body .index-section-body-summary {
+    font-size: .24rem;
+    color: #555;
+    margin-top: .15rem; }
+
+.index-section-footer {
+  padding: .2rem;
+  text-align: center;
+  background: #fff; }
+  .index-section-footer .index-btn {
+    display: inline-block;
+    padding: .1rem .4rem;
+    border: 1px solid #999;
+    border-radius: 3px; }
+    .index-section-footer .index-btn:active {
+      color: #fff;
+      background-color: #FF6700;
+      border-color: #FF6700; }
+
+.index-footer {
+  text-align: center;
+  padding: .3rem;
+  font-size: .24rem; }
+
+.login-logo {
+  width: 3rem;
+  margin-top: .5rem; }
+
+.wrap-input {
+  display: -webkit-box;
+  -webkit-box-align: center;
+  -webkit-box-orient: horizontal;
+  -webkit-box-pack: center;
+  height: 1rem;
+  border-bottom: 1px solid #e1e1e1;
+  background: #fff;
+  margin: 0 .6rem;
+  color: #909090; }
+  .wrap-input i {
+    display: -webkit-box;
+    vertical-align: middle; }
+  .wrap-input .input {
+    padding-left: .2rem;
+    display: -webkit-box;
+    -webkit-box-flex: 1;
+    border: 0;
+    outline: none;
+    -webkit-appearance: none;
+    background: transparent;
+    font-size: .32rem; }
+  .wrap-input .verify {
+    display: -webkit-box;
+    border-left: 1px solid #e1e1e1;
+    padding: .1rem .2rem; }
+
+html, body, #container, #container > div {
+  height: 100% !important; }
+
+#container > div {
+  display: -webkit-box;
+  -webkit-box-orient: vertical; }
+
+.transitionWrapper {
+  display: -webkit-box;
+  -webkit-box-flex: 1;
+  height: 100%;
+  overflow: hidden; }
+
+.login {
+  background: #fff;
+  text-align: center;
+  height: 100%;
+  border-top: 1px solid #e1e1e1; }
 @charset "UTF-8";
 .head {
   display: -webkit-box;
@@ -222,10 +476,14 @@ body {
     background-size: .45rem; }
   .head .left {
     width: 1rem;
-    display: -webkit-box; }
+    display: -webkit-box;
+    -webkit-box-align: center;
+    -webkit-box-pack: center; }
   .head .right {
     width: 1rem;
-    display: -webkit-box; }
+    display: -webkit-box;
+    -webkit-box-align: center;
+    -webkit-box-pack: center; }
   .head .content {
     text-align: center;
     display: -webkit-box;
@@ -233,6 +491,9 @@ body {
     -webkit-box-orient: horizontal;
     -webkit-box-pack: center;
     -webkit-box-flex: 1; }
+  .head .logo {
+    display: -webkit-box;
+    height: .5rem; }
 
 .banner {
   position: relative; }
@@ -259,7 +520,7 @@ body {
         background: #333; }
 
 .side-menu {
-  position: absolute;
+  position: fixed;
   top: 0;
   left: 0;
   width: 100%;
@@ -327,7 +588,7 @@ body {
       height: 5px;
       border-radius: 50%;
       background: #fff;
-      border: 2px solid #999;
+      border: 2px solid #eee;
       margin: -2.5px 0 0 -2.5px;
       left: 0; }
     .time-line .time-line-item .time-line-item-content {
@@ -377,3 +638,33 @@ body {
     font-size: .24rem;
     width: 100%;
     text-align: right; }
+
+.sub-header {
+  position: relative;
+  font-size: .26rem;
+  background: #fff;
+  padding: .2rem .2rem .2rem .4rem;
+  border-bottom: 1px solid #e1e1e1; }
+  .sub-header:before {
+    content: '';
+    position: absolute;
+    width: 3px;
+    background: #FF6700;
+    height: .4rem;
+    left: .2rem; }
+
+.friend-links {
+  background: #fff;
+  padding: .2rem; }
+  .friend-links .link {
+    display: inline-block;
+    margin-right: .2rem; }
+@font-face {
+  font-family: 'iconfont';
+  /* project id 319636 */
+  src: url("//at.alicdn.com/t/font_lqo8blo0eyqoajor.eot");
+  src: url("//at.alicdn.com/t/font_lqo8blo0eyqoajor.eot?#iefix") format("embedded-opentype"), url("//at.alicdn.com/t/font_lqo8blo0eyqoajor.woff") format("woff"), url("//at.alicdn.com/t/font_lqo8blo0eyqoajor.ttf") format("truetype"), url("//at.alicdn.com/t/font_lqo8blo0eyqoajor.svg#iconfont") format("svg"); }
+
+.iconfont {
+  font-family: iconfont;
+  font-size: .5rem; }
