--- a/src/assets/scss/font/index.scss
+++ b/src/assets/scss/font/index.scss
@@ -1,10 +1,10 @@
 @font-face {
-  font-family: 'iconfont';  /* project id 319636 */
-  src: url('//at.alicdn.com/t/font_1zxpj4bsy55qaor.eot');
-  src: url('//at.alicdn.com/t/font_1zxpj4bsy55qaor.eot?#iefix') format('embedded-opentype'),
-  url('//at.alicdn.com/t/font_1zxpj4bsy55qaor.woff') format('woff'),
-  url('//at.alicdn.com/t/font_1zxpj4bsy55qaor.ttf') format('truetype'),
-  url('//at.alicdn.com/t/font_1zxpj4bsy55qaor.svg#iconfont') format('svg');
+  font-family: 'iconfont';
+  src: url('iconfont.eot');
+  src: url('iconfont.eot?#iefix') format('embedded-opentype'),
+  url('iconfont.woff') format('woff'),
+  url('iconfont.ttf') format('truetype'),
+  url('iconfont.svg#iconfont') format('svg');
 }
 
 .iconfont{
