--- a/src/assets/scss/base.scss
+++ b/src/assets/scss/base.scss
@@ -455,12 +455,17 @@ html,body,#container, #container>div{
 .order-container{
   @include flex(horizontal,start,start);
   background: #fff;
+  -webkit-box-flex:1;
+  overflow: hidden;
+  position: relative;
+  height: 100%;
   .order-menu{
-    display: -webkit-box;
     width: 2rem;
-    -webkit-box-orient: vertical;
     font-size: .24rem;
     color: #575757;
+    overflow: scroll;
+    height: 100%;
+    position: absolute;
     .item{
       background: #FAFAFA;
       border-bottom: 1px solid #D6D7DC;
@@ -474,13 +479,14 @@ html,body,#container, #container>div{
     }
   }
   .order-sub-list{
-       display: -webkit-box;
-      -webkit-box-flex: 1;
-      -webkit-box-orient: vertical;
-      margin: 0 .2rem;
-      border-bottom: 1px solid #e1e1e1;
-      padding: .2rem 0;
-      background-color: white;
+        border-bottom: 1px solid #e1e1e1;
+    background-color: white;
+    overflow: scroll;
+    height: 100%;
+    position: absolute;
+    left: 2.2rem;
+    width: calc( 100% - 2.4rem);
+
     .order-sub-item{
       @include flex;
       padding: .2rem 0;
@@ -526,7 +532,15 @@ html,body,#container, #container>div{
     }
   }
 }
-
+.order-add-wrapper{
+  display: -webkit-box;
+  -webkit-box-orient: vertical;
+  height: 100%;
+  .banner{
+    display: -webkit-box;
+    -webkit-box-orient: vertical;
+  }
+}
 .minus{
   width: .4rem;
   height: .4rem;
@@ -542,14 +556,11 @@ html,body,#container, #container>div{
   margin-left: .1rem;
 }
 .order-btn-submit{
-  position: fixed;
-  height: 1rem;
-  text-align: center;
-  width: 100%;
-  font-size: .32rem;
-  bottom: 0;
-  line-height: 1rem;
-  background: #fff;
+    display: -webkit-box;
+    background: #fafafa;
+    height: 1rem;
+    -webkit-box-align: center;
+    -webkit-box-pack: center;
 }
 
 .detail-list{
@@ -944,4 +955,24 @@ input[type=radio]:checked{
   top: 30% !important;
   height: initial !important;
   bottom: initial !important;
+}
+
+.not-find{
+  text-align: center;
+  .not-find-img{
+    width: 4rem;
+    margin-top: 1.5rem;
+
+  }
+  .not-find-txt{
+    color: #999;
+  }
+
+}
+
+::-webkit-scrollbar
+{
+    width: 0;
+    height: 0;
+    background-color: #F5F5F5;
 }
